--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.1",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/svelte": "^5.7.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@babylonjs/core": "^7.23.0",
+    "astro": "^4.15.1",
+    "svelte": "^4.2.19",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
 }
